--- a/.htaccess
+++ b/.htaccess
@@ -69,7 +69,7 @@ Redirect 301 /wasabi.html /services/wasabi.html
 
 # Soft Launch Clean Redirects for Buoy
 # Created: 2025-08-09
-Redirect 302 /wix /?utm_source=wix&utm_medium=forum&utm_campaign=softlaunch
+Redirect 302 /wip /?utm_source=wip&utm_medium=forum&utm_campaign=softlaunch
 Redirect 302 /reddit /?utm_source=reddit&utm_medium=forum&utm_campaign=softlaunch
 Redirect 302 /nostr /?utm_source=nostr&utm_medium=social&utm_campaign=softlaunch
 Redirect 302 /x /?utm_source=twitter&utm_medium=social&utm_campaign=softlaunch
@@ -81,8 +81,6 @@ Redirect 302 /bitcointalk /?utm_source=bitcointalk&utm_medium=forum&utm_campaign
 Redirect 302 /bitcoincom /?utm_source=bitcoincom&utm_medium=forum&utm_campaign=softlaunch
 Redirect 302 /bitcoinse /?utm_source=bitcoinse&utm_medium=forum&utm_campaign=softlaunch
 Redirect 302 /bitco_in /?utm_source=bitco_in&utm_medium=forum&utm_campaign=softlaunch
-Redirect 302 /cryptotalk /?utm_source=cryptocurrencytalk&utm_medium=forum&utm_campaign=softlaunch
-Redirect 302 /bitcoingarden /?utm_source=bitcoingarden&utm_medium=forum&utm_campaign=softlaunch
 Redirect 302 /altcoinstalks /?utm_source=altcoinstalks&utm_medium=forum&utm_campaign=softlaunch
 
 # Make sure mod_alias is enabled in Apache
