--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 # ==== Buoy canonical redirects (static compare/service) ====
 RewriteEngine On
 
+# Redirect any /index.html to clean slash URL
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)/index\.html [NC]
+RewriteRule ^ %1/ [R=301,L]
+
 # BEGIN compare-redirects (auto)
 RewriteRule ^anchorwatch-vs-bitkey.html$ /compare/anchorwatch-vs-bitkey.html [R=301,L]
 RewriteRule ^bitkey-vs-anchorwatch.html$ /compare/anchorwatch-vs-bitkey.html [R=301,L]
